// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie details component should have image 1`] = `
<article
  className="py-3"
>
  <img
    alt="Title"
    className="float-left pr-2"
    src="https://image.mock.api/big/image-path.jpg"
  />
  <dl>
    <dd
      className="float-left mb-0 mr-2"
    >
      Rating:
    </dd>
    <dt>
      1.1
       (
      1
       votes)
    </dt>
    <dd
      className="float-left mb-0 mr-2"
    >
      Genres:
    </dd>
    <dt>
      First, Second
    </dt>
    <dd
      className="float-left mb-0 mr-2"
    >
      Release date:
    </dd>
    <dt>
      2017-01-01
    </dt>
  </dl>
  <p
    className="text-justify m-0"
  >
    Overview
  </p>
</article>
`;

exports[`Movie details component should not have image 1`] = `
<article
  className="py-3"
>
  
  <dl>
    <dd
      className="float-left mb-0 mr-2"
    >
      Rating:
    </dd>
    <dt>
      1.1
       (
      1
       votes)
    </dt>
    <dd
      className="float-left mb-0 mr-2"
    >
      Genres:
    </dd>
    <dt>
      First, Second
    </dt>
    <dd
      className="float-left mb-0 mr-2"
    >
      Release date:
    </dd>
    <dt>
      2017-01-01
    </dt>
  </dl>
  <p
    className="text-justify m-0"
  >
    Overview
  </p>
</article>
`;
